2004-05-22  Not Zed  <NotZed@Ximian.com>

	* camel-store.c: oops, forgot folder_created.  Removed locking, the
	object bag serialises stuff for us.
	(camel_store_get_junk): same.

	** Another unread count bug, #58814.

	* camel-store.c (camel_store_class_init): added a folder_opened
	event.
	(camel_store_get_folder): emit a folder_opened event whenever we
	[re] open the physical folder.

2004-05-21  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap/camel-imap-store.c (connect_to_server): Added a
	workaround for broken IMAP. Hopefully by forcing only the IMAP4
	command subst, we can work around their suckage.

2004-05-21  Not Zed  <NotZed@Ximian.com>

	* camel-session.c (camel_session_get_password): added a 'domain'
	argument, and rearragned arguments to be prettier and more
	consistent.  Fixed all callers.
	(camel_session_forget_password): added a domain argument.  Fixed
	all callers.

	** See #58376.

	* camel-folder.c (set_message_flags): if system flags change, then
	don't trigger a folder changed event.

	* camel-folder-summary.h (CAMEL_MESSAGE_SYSTEM_MASK): added this
	to indicate which flags are internal/apps not interested in.

	* camel-folder.c (filter_free): rearrange and use some helpers.
	(folder_changed): if we're frozen, dont go firing off threads to
	do any processing on each change, wait until we're called
	unfrozen.  Slight code rearragnement.
	(filter_filter): add progress to junk learn/unlearn, and separate
	them.

2004-05-19  Suresh Chandrasekharan  <suresh.chandrasekharan@sun.com>

	Fix for #58738 ja_JP.UTF-8: Evolution crashes when certain 
	ASCII/non-ASCII combination is used in mail subject

	* camel-mime-utils.c: (camel_header_encode_string) Use 
	camel_mime_is_lwsp for determining word separators, 
	according to rfc822 (which's also same for rfc2047). 
	g_unichar_isspace as word separator is illegal.

2004-05-20  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #42295 and the infinite loop part of bug #58766 (these 2