@@ -67,7 +67,10 @@ CamelProviderConfEntry groupwise_conf_entries[] = {
 
 	{ CAMEL_PROVIDER_CONF_ENTRY, "soap_port", NULL,
 	  N_("Post Office Agent SOAP Port:"), "7181" },
-	
+
+	{ CAMEL_PROVIDER_CONF_HIDDEN, "auth-domain", NULL,
+	  NULL, "Groupwise" },
+	 	
 	{ CAMEL_PROVIDER_CONF_SECTION_END }, 
 
 
